traefik-test/seeds-web/ingress-admin.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: seeds-adminweb-ingress
  namespace: seeds-uat 
  annotations:
    kubernetes.io/ingress.class: traefik
    # 默认 true
    # nginx.ingress.kubernetes.io/ssl-redirect: "false"
    cert-manager.io/issuer: letsencrypt-prod
spec:
  tls: 
  - secretName: seeds-adminweb-ssl
    hosts:
    - seeds-adminweb.seedslabs.io
  rules:
  - host: seeds-adminweb.seedslabs.io
    http:
      paths:
      - backend:
          service:
            name: seeds-adminweb
            port:
              number: 80
        path: /
        pathType: Prefix
