traefik-test/seeds-web/ingress-gateway.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: seeds-gateway-ingress
  namespace: seeds-uat 
  annotations:
    kubernetes.io/ingress.class: traefik
    # nginx.ingress.kubernetes.io/ssl-redirect: "false"
    # cert-manager.io/issuer: letsencrypt-prod
spec:
  # tls: 
  # - secretName: seeds-gateway-ssl
  #   hosts:
  #   - seeds-gateway.seedslabs.io
  rules:
  - host: seeds-gateway.seedslabs.io
    http:
      paths:
      - backend:
          service:
            name: seeds-gateway
            port:
              number: 9999
        path: /
        pathType: Prefix
