traefik-test/seeds-web/ingress-web.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: seeds-web-ingress
  namespace: seeds-uat 
  annotations:
    kubernetes.io/ingress.class: traefik
    # nginx.ingress.kubernetes.io/ssl-redirect: "false"
    cert-manager.io/issuer: letsencrypt-prod
spec:
  tls: 
  - secretName: seeds-web-ssl
    hosts:
    - seeds-web.seedslabs.io
  rules:
  - host: seeds-web.seedslabs.io
    http:
      paths:
      - backend:
          service:
            name: seeds-web
            port:
              number: 8001
        path: /
        pathType: Prefix
